--- a/css/layout.css
+++ b/css/layout.css
@@ -66,11 +66,13 @@ header{
   text-decoration:none;
   color:var(--ink);
   line-height:1.1;
+  text-align: center;
 }
 
 .site-title strong{
   font-size:22px;
   letter-spacing:.4px;
+
 }
 
 .site-title small{
